Switch to XeLaTeX, signature feature+

--- a/_template.tex
+++ b/_template.tex
@@ -26,4 +26,6 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed venenatis dignissim
 %\item Attachment 1
 %\end{attachment}
 
+\signed
+
 \end{document}
